--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,58 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=NTR&display=swap');
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: NTR;
+  color: #ffffff;
+  background: #8c8c8c;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.navbar {
+  padding: 1rem 0;
+  display: flex;
+  align-items: center;
+  max-width: 80vw;
+  margin: 0 auto;
+  background: #8c8c8c;
+}
+.navbar h1 {
+  color: #ffffff;
+  font-size: 1.4rem;
+  font-weight: bold;
+  margin-right: auto;
+  margin-left: 2rem;
+}
+
+.navbar .links {
+  margin-left: auto;
+  list-style: none;
+  margin-right: 2rem;
+}
+
+.navbar a {
+  font-size: 1.1rem;
+  font-weight: bold;
+  margin-left: 16px;
+  text-decoration: none;
+  padding: 6px;
+  transition: all 200ms ease-in;
+}
+
+.navbar a:hover {
+  color: #cf9fff;
+}
+
+.content {
+  max-width: 600px;
+  margin: 40px auto;
+  padding: 20px;
+}
+
+.credits {
+  text-align: center;
+  padding: 1rem 0;
+  margin: 2rem auto 0;
+  max-width: 80vw;
+  background-color: #8c8c8c;
+  color: #ffffff;
 }
