--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=NTR&display=swap');
 
+html {
+    scroll-behavior: smooth;
+}
+
 * {
   margin: 0;
   font-family: NTR;
