--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -5,6 +5,11 @@
   max-width: 80vw;
   margin: 0 auto;
   background: #8c8c8c;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
 }
 
 .navbar h1 {
@@ -28,8 +33,25 @@
   text-decoration: none;
   padding: 6px;
   transition: all 200ms ease-in;
+  position: relative;
 }
 
 .navbar a:hover {
   color: #cf9fff;
+}
+
+.navbar a.active {
+  color: #cf9fff;
+}
+
+.navbar a.active::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #cf9fff;
+  transform: scaleX(1);
+  transition: transform 200ms ease-in;
 } 
