--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -16,42 +16,46 @@
   color: #ffffff;
   font-size: 1.4rem;
   font-weight: bold;
-  margin-right: auto;
   margin-left: 2rem;
 }
 
-.navbar .links {
+.navbar .section-links {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  margin-left: 2rem;
+}
+
+.navbar .social-links {
   margin-left: auto;
-  list-style: none;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
   margin-right: 2rem;
 }
 
 .navbar a {
   font-size: 1.1rem;
   font-weight: bold;
-  margin-left: 16px;
   text-decoration: none;
   padding: 6px;
   transition: all 200ms ease-in;
   position: relative;
+  color: #ffffff;
+  display: flex;
+  align-items: center;
 }
 
 .navbar a:hover {
   color: #cf9fff;
 }
 
-.navbar a.active {
-  color: #cf9fff;
+.navbar a svg {
+  font-size: 1.4rem;
+  transition: all 200ms ease-in;
 }
 
-.navbar a.active::after {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 2px;
-  background-color: #cf9fff;
-  transform: scaleX(1);
-  transition: transform 200ms ease-in;
-} 
+.navbar a:hover svg {
+  color: #cf9fff;
+  transform: scale(1.1);
+}
