--- a/src/styles/Global.css
+++ b/src/styles/Global.css
@@ -7,6 +7,6 @@ html {
 * {
   margin: 0;
   font-family: NTR;
-  color: #ffffff;
-  background: #8c8c8c;
+  color: #fffae3;
+  background: #383961;
 } 
