--- a/src/styles/Credits.css
+++ b/src/styles/Credits.css
@@ -3,6 +3,6 @@
   padding: 1rem 0;
   margin: 2rem auto 0;
   max-width: 80vw;
-  background-color: #8c8c8c;
-  color: #ffffff;
+  background-color: #383961;
+  color: #fffae3;
 } 
