Changed formatting, Added text

--- a/src/styles/Credits.css
+++ b/src/styles/Credits.css
@@ -1,7 +1,7 @@
 .credits {
   text-align: center;
   padding: 1rem 0;
-  margin: 2rem auto 0;
+  margin: 2rem auto 1.0rem;
   max-width: 80vw;
   background-color: #383961;
   color: #fffae3;
