--- a/src/styles/Sections.css
+++ b/src/styles/Sections.css
@@ -1,4 +1,13 @@
-.section {
+.section{
+    height: 50vh;
+    padding: 2rem 2rem 2rem 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    scroll-margin-top: 60px;
+}
+
+#home {
     height: 70vh;
     padding: 4rem 2rem;
     display: flex;
@@ -8,7 +17,7 @@
 }
 
 .section .content {
-    max-width: 800px;
+    width: 65vw;
     text-align: center;
 }
 
@@ -16,23 +25,28 @@
     text-align: center;
 }
 
-#about .content,
-#projects .content {
+.section .content {
     text-align: left;
 }
 
 .section h1 {
     font-size: 3.0rem;
-    margin-bottom: 0.5rem;
 }
 
 .section h2 {
+    margin-top: -2.5rem;
     font-size: 2.5rem;
-    margin-bottom: 1.5rem;
 }
 
 .section p {
+    width: 40vw;
     font-size: 1.5rem;
     line-height: 1.6;
-    margin-bottom: 1rem;
+}
+
+.section a,
+.section b {
+    text-decoration: none;
+    font-size: 1.6rem;
+    font-weight: bold;
 }
